--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,5 +25,10 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
+    echo $(DBDev)
+    echo $(DBTest)
+  displayName: 'Print environment variables'
+
+- script: |
      python -m unittest discover
   displayName: 'unittest'
