--- a/.github/workflows/master_gfsedo.yml
+++ b/.github/workflows/master_gfsedo.yml
@@ -30,7 +30,13 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
         
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Run tests
+        run: python -m unittest tests/test_basics.py
+        env:
+          FLASK_DEBUG: ${{ secrets.FLASK_DEBUG }}
+          APP_SECRET_KEY: ${{ secrets.APP_SECRET_KEY }}
+          DBDev: ${{ secrets.DBDev }}
+          DBTest: ${{ secrets.DBTest }}
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
