--- a/.github/workflows/master_gfsedo.yml
+++ b/.github/workflows/master_gfsedo.yml
@@ -26,7 +26,6 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-     
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
@@ -37,18 +36,22 @@ jobs:
           path: |
             release.zip
             !venv/
+
   test:
+    runs-on: ubuntu-latest
+    needs: build
     environment:
-        name: 'Production'
-        url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-        - name: Run tests
-        
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    steps:
+      - name: Run tests
         run: python -m unittest tests/test_basics.py
         env:
           FLASK_DEBUG: ${{ secrets.FLASK_DEBUG }}
           APP_SECRET_KEY: ${{ secrets.APP_SECRET_KEY }}
           DBDev: ${{ secrets.DBDev }}
           DBTest: ${{ secrets.DBTest }}
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
