--- a/.github/workflows/master_gfsedo.yml
+++ b/.github/workflows/master_gfsedo.yml
@@ -44,8 +44,20 @@ jobs:
       name: 'Production'
       url: https://gfsedo.azurewebsites.net/
     steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python version
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.11'
+
+
       - name: Run tests
-        run: python -m unittest tests.test_basics.py
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
+          pytest tests/test_basics.py
         env:
           FLASK_DEBUG: ${{ secrets.FLASK_DEBUG }}
           APP_SECRET_KEY: ${{ secrets.APP_SECRET_KEY }}
