Changing Dev Branch YAML to use Development GitHub env

--- a/.github/workflows/dev_gfsedodev.yml
+++ b/.github/workflows/dev_gfsedodev.yml
@@ -47,8 +47,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      name: 'Development'
+      url: https://gfsedodev.azurewebsites.net
     
     steps:
       - name: Download artifact from build job
