--- a/.github/workflows/dev_gfsedodev.yml
+++ b/.github/workflows/dev_gfsedodev.yml
@@ -70,7 +70,7 @@ jobs:
           ServerName: ${{ secrets.ServerName }}
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, test]
     environment:
       name: 'Development'
       url: https://gfsedodev.azurewebsites.net
