--- a/.github/workflows/dev_gfsedodev.yml
+++ b/.github/workflows/dev_gfsedodev.yml
@@ -61,7 +61,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
-          python -m unittest tests.DevTests
+          python -m unittest tests.test_Dev
         env:
           FLASK_DEBUG: ${{ secrets.FLASK_DEBUG }}
           APP_SECRET_KEY: ${{ secrets.APP_SECRET_KEY }}
