Added tests back in, and corrected environment in test stage

--- a/.github/workflows/dev_gfsedodev.yml
+++ b/.github/workflows/dev_gfsedodev.yml
@@ -46,7 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'Development'
       url: https://gfsedo.azurewebsites.net/
     steps:
       - uses: actions/checkout@v4
