--- a/.github/workflows/dev_gfsedodev.yml
+++ b/.github/workflows/dev_gfsedodev.yml
@@ -47,7 +47,7 @@ jobs:
     needs: build
     environment:
       name: 'Development'
-      url: https://gfsedo.azurewebsites.net/
+      url: https://gfsedodev.azurewebsites.net/
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python version
